admin blank page and fixed navbar tooltip not centered

--- a/components/NavBar/Tooltip/Tooltip.module.css
+++ b/components/NavBar/Tooltip/Tooltip.module.css
@@ -8,9 +8,8 @@
   position: absolute;
   z-index: 1000;
   top: calc(100% - 0.6rem);
-  left: calc(
-    -1 * (1.9rem + (1.4rem / 2))
-  ); /* calc(-1 * (profile image width + (horizontal padding of content below / 2))) */
+  left: 50%;
+  transform: translateX(-50%);
   white-space: nowrap;
   opacity: 0;
   padding-top: 0.7rem;
